--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,56 @@
+# Python
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Virtual environments
 .venv/
-.env
+
+# IDEs and editors
+.idea/
+.vscode/
+*.sublime-workspace
+
+# Logs
 *.log
+logs/
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# MacOS
+.DS_Store
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Testing
+coverage/
+.coverage
+.tox/
+nox/
+.pytest_cache/
+
+# Build and distribution
+build/
+dist/
+*.egg-info/
+
+# Miscellaneous
+*.bak
+*.swp
+*~
+*.tmp
