--- a/js/package.json
+++ b/js/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "lint": "eslint src",
     "build": "webpack --mode production",
-    "dev": "webpack --mode development --watch"
+    "dev": "webpack --mode development --watch",
+    "example:vector": "node examples/vector_search.js"
   },
   "keywords": [
     "atdf",
@@ -29,5 +30,9 @@
   },
   "dependencies": {
     "ajv": "^8.12.0"
+  },
+  "optionalDependencies": {
+    "lancedb": "^0.5.0",
+    "@xenova/transformers": "^2.15.0"
   }
 } 
