--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,45 @@ dist/
 *.swp
 *~
 *.tmp
+
+# Entorno virtual
+atdf_venv/
+venv/
+env/
+.env/
+
+# Archivos temporales
+test_output/
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Archivos temporales de ejemplos
+js/examples/output/*
+!js/examples/output/.gitkeep
+
+# Archivos de prueba
+test_converter.py
+
+# Archivos de configuración IDE
+.idea/
+.vscode/
+*.swp
+*.swo
