--- a/js/package.json
+++ b/js/package.json
@@ -4,11 +4,19 @@
   "description": "Agent Tool Description Format (ATDF) JavaScript SDK",
   "main": "src/index.js",
   "scripts": {
-    "test": "jest",
-    "lint": "eslint src",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
+    "test:ci": "jest --coverage --ci --watchAll=false",
+    "lint": "eslint src examples --ext .js,.ts",
+    "lint:fix": "eslint src examples --ext .js,.ts --fix",
+    "format": "prettier --write \"src/**/*.{js,ts,json}\" \"examples/**/*.{js,ts,json}\"",
+    "format:check": "prettier --check \"src/**/*.{js,ts,json}\" \"examples/**/*.{js,ts,json}\"",
     "build": "webpack --mode production",
+    "build:dev": "webpack --mode development",
     "dev": "webpack --mode development --watch",
-    "example:vector": "node examples/vector_search.js"
+    "clean": "rm -rf dist coverage",
+    "example:vector": "node examples/vector_search.js",
+    "example:basic": "node examples/basic_usage.js"
   },
   "keywords": [
     "atdf",
@@ -22,9 +30,17 @@
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@babel/preset-env": "^7.24.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "babel-loader": "^9.1.3",
     "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jest": "^27.6.3",
+    "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "prettier": "^3.2.5",
+    "typescript": "^5.3.3",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4"
   },
@@ -35,4 +51,4 @@
     "lancedb": "^0.5.0",
     "@xenova/transformers": "^2.15.0"
   }
-} 
+}
