feat(cli): add ATDF CLI tool for validation and conversion
Add new command-line interface for working with ATDF descriptors including:
- Validation of ATDF files with smart schema detection
- Conversion between MCP and ATDF formats
- Enrichment of basic descriptors with metadata
- Comprehensive test coverage for all CLI commands
- Documentation in CLI_REFERENCE.md
- Error schema validation in integration tests

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,4 @@ pandas>=1.0.0      # Manipulación de datos, a menudo una dependencia
 # Requisitos opcionales para búsqueda vectorial
 lancedb>=0.1.17
 sentence-transformers>=2.2.2 
+click>=8.0.0
