--- a/bmad/deliverables/planning/roadmap_epics.yml
+++ b/bmad/deliverables/planning/roadmap_epics.yml
@@ -42,12 +42,12 @@
 - id: ATDF-EPIC-004
   name: ATDF Server Profile
   objective: Publicar perfil oficial de endpoints ATDF y servidor FastAPI de referencia.
-  status: planned
+  status: in_progress
   tasks:
   - id: ATDF-TASK-007
     description: Definir especificación de endpoints y métricas.
     owner: Architect
-    status: planned
+    status: completed
   - id: ATDF-TASK-008
     description: Actualizar ejemplo FastAPI para cumplir con el perfil.
     owner: Dev
