--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -26,6 +26,7 @@ jobs:
         uses: actions/jekyll-build-pages@v1
         with:
           source: "./docs"
+          destination: "./_site"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
