fix: update service scripts and test data for suite room type
- Mark ATDF CLI Toolkit epic as completed in roadmap
- Add environment variables to service startup commands
- Update test workflow to use 'suite' room type instead of 'deluxe'
- Clean up service script output messages

--- a/bmad/deliverables/planning/roadmap_epics.yml
+++ b/bmad/deliverables/planning/roadmap_epics.yml
@@ -29,7 +29,7 @@
 - id: ATDF-EPIC-003
   name: ATDF CLI Toolkit
   objective: Entregar CLI oficial con comandos validate/convert/enrich/search.
-  status: in_progress
+  status: completed
   tasks:
   - id: ATDF-TASK-005
     description: Implementar CLI mínima (validate/convert/enrich).
