--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,9 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
+      - name: Ensure pip cache directory exists
+        run: mkdir -p ~/.cache/pip
+
       - name: Cache Python dependencies
         uses: actions/cache@v3
         with:
@@ -67,6 +70,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+
+      - name: Ensure pip cache directory exists
+        run: mkdir -p ~/.cache/pip
 
       - name: Cache Python dependencies
         uses: actions/cache@v3
