--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,6 +108,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Ensure npm cache directory exists
+        run: mkdir -p ~/.npm
+
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
