chore: align tooling with ci security checks

--- a/js/package.json
+++ b/js/package.json
@@ -7,8 +7,8 @@
     "test": "jest --coverage",
     "test:watch": "jest --watch",
     "test:ci": "jest --coverage --ci --watchAll=false",
-    "lint": "eslint src examples --ext .js,.ts",
-    "lint:fix": "eslint src examples --ext .js,.ts --fix",
+    "lint": "eslint \"src/**/*.{ts,js}\" \"examples/**/*.{ts,js}\"",
+    "lint:fix": "eslint \"src/**/*.{ts,js}\" \"examples/**/*.{ts,js}\" --fix",
     "format": "prettier --write \"src/**/*.{js,ts,json}\" \"examples/**/*.{js,ts,json}\"",
     "format:check": "prettier --check \"src/**/*.{js,ts,json}\" \"examples/**/*.{js,ts,json}\"",
     "build": "webpack --mode production",
