--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -13,24 +13,24 @@ python-Levenshtein>=0.12.0 # Speeds up thefuzz
 # Documentation dependencies
 
 # Testing dependencies
-pytest>=7.4.0
-pytest-cov>=4.1.0
-pytest-asyncio>=0.21.0
-pytest-mock>=3.11.0
+pytest>=7,<9
+pytest-cov>=4.1,<6
+pytest-asyncio>=0.21,<0.24
+pytest-mock>=3.12,<4
 
 # Code Quality
-black>=23.0.0
-isort>=5.12.0
-flake8>=6.0.0
-mypy>=1.5.0
+black==24.8.0
+isort>=5.13,<6
+flake8>=6.1,<7
+mypy>=1.10,<2
 
 # Security
-safety>=2.3.0
-bandit>=1.7.0
+safety>=2.3,<3
+bandit>=1.7,<2
 
 # Development
-pre-commit>=3.3.0
-coverage>=7.2.0
+pre-commit>=3.6,<4
+coverage[toml]>=7.6,<8
 
 # API Testing
 httpx>=0.24.0
