chore(web,monorepo): revert distDir to .next; add clean scripts for web and monorepo; fix web page isPending; ensure monorepo builds clean

--- a/ardf-manager/apps/api/package.json
+++ b/ardf-manager/apps/api/package.json
@@ -15,9 +15,10 @@
     "@ardf/core": "*",
     "@ardf/mcp": "*",
     "@ardf/search": "*",
-    "@modelcontextprotocol/sdk": "^0.2.0",
+    "@modelcontextprotocol/sdk": "^1.19.1",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "@ardf/database": "*"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
