--- a/ardf-manager/apps/web/package.json
+++ b/ardf-manager/apps/web/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "node -e \"const fs=require('fs'); ['.next','dist'].forEach(d=>{try{fs.rmSync(d,{recursive:true,force:true});}catch(e){}});\""
   },
   "dependencies": {
     "@ardf/core": "*",
