--- a/ardf-manager/apps/api/package.json
+++ b/ardf-manager/apps/api/package.json
@@ -13,20 +13,20 @@
   },
   "dependencies": {
     "@ardf/core": "*",
+    "@ardf/database": "*",
     "@ardf/mcp": "*",
     "@ardf/search": "*",
     "@modelcontextprotocol/sdk": "^1.19.1",
     "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "@ardf/database": "*"
+    "express": "^4.19.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
     "@types/node": "^20.0.0",
-    "@types/cors": "^2.8.17",
+    "eslint": "^8.57.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3",
-    "eslint": "^8.57.0",
     "vitest": "^1.6.0"
   }
 }
