--- a/ardf-manager/packages/database/package.json
+++ b/ardf-manager/packages/database/package.json
@@ -16,6 +16,7 @@
     "better-sqlite3": "^9.4.0"
   },
   "devDependencies": {
+    "@cspotcode/source-map-support": "^0.8.1",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20.0.0",
     "eslint": "^8.57.0",
